objects/APTS_SubItem__c.object
<CustomObject>
    <description>Object to hold subitem specific information</description>
    <fields>
        <fullName>APTS_Expected_Market_Price__c</fullName>
        <label>Expected Market Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Record Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Line_Item__c</fullName>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>SubItems</relationshipLabel>
        <relationshipName>SubItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Original_Sales_Price__c</fullName>
        <label>Original Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Proposal_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>SubItems</relationshipLabel>
        <relationshipName>SubItems_PLI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Standard_Discounts__c</fullName>
        <label>Standard Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price__c</fullName>
        <label>Transfer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SubItem</label>
    <nameField>
        <displayFormat>SUBITEM-{000000}</displayFormat>
        <label>SubItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>